[package]
name = "keeper-api"
version = "0.1.0"
authors = ["Akshat Adsule <30205531+AkshatAdsule@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
mongodb = "1.0.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
